--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "id": "templateExtension",
+    "id": "arduinoTest",
     "extensionDisplay": {
         "name": "gui.extension.templateExtension.name",
         "iconURL": "/images/Cat03.jpg",
